--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
         ddk: ${{secrets.DOCKER_DEPLOY_KEY}}
       run: echo $ddk | docker login -u flohsg --password-stdin
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag nginx_proxy_http:$(date +%s) -t nginx_proxy_http:latest && 
+      run: docker build . --file Dockerfile --tag nginx_proxy_http:$(date +%s) -t nginx_proxy_http:latest
     - name: docker push
       run: docker push nginx_proxy_http
     - name: docker logout
